# RedisPractice

./: CMakeLists.txt  Dockerfile
.github/workflows/: build.yml  build2.yml
src/: main.cpp  redisCommandHandler.cpp  redisCommandHandler.h  redisDatabase.cpp  redisDatabase.h  redisServer.cpp  redisServer.h
tests/: simplified.cpp  tasks.txt  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp
